# fcswrite

./: .gitignore  .travis.yml  CHANGELOG  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: check.yml  check_linux.yml  python-package.yml  release_pypi.yml
examples/: numpy2fcs.py  tdms2fcs.py
examples/data/: example_rt-dc.tdms
fcswrite/: __init__.py  fcswrite.py
tests/: requirements.txt  test_header_size.py  test_read_fcm.py  test_read_fcsparser.py  test_write_simple.py
